Added functional XP Bank

--- a/src/main/resources/assets/mcextra/lang/en_us.json
+++ b/src/main/resources/assets/mcextra/lang/en_us.json
@@ -1,5 +1,10 @@
 {
   "item.mcextra.ancient_eye": "Ancient Eye",
   "item.mcextra.slime_chunk_detector": "Slime Chunk Detector",
-  "itemgroup.mcextra.mcextragroup" : "MC Extra"
+  "itemgroup.mcextra.mcextragroup" : "MC Extra",
+
+  "block.mcextra.xp_bank": "XP Bank",
+  "block.mcextra.xp_bank.xpMessage": "There is %d xp in the bank",
+  "block.mcextra.xp_bank.bank_not_enough_xp": "There is not enough XP in the bank!",
+  "block.mcextra.xp_bank.player_not_enough_xp": "You do not have enough XP! You have %d xp!"
 }
