--- a/src/main/resources/assets/mcextra/lang/en_us.json
+++ b/src/main/resources/assets/mcextra/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.mcextra.ancient_eye": "Ancient Eye",
   "item.mcextra.slime_chunk_detector": "Slime Chunk Detector",
+  "item.mcextra.record": "Empty Record",
   "itemgroup.mcextra.mcextragroup" : "MC Extra",
 
   "block.mcextra.xp_bank": "XP Bank",
